Fixed Topper on Mobile

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   margin-block: 2rem;
-  margin-inline: 8.5%;
   max-height: 32px;
 }
 
